--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ default = []
 dynamic-linking = ["bevy/dynamic_linking"]
 
 [dependencies]
-bevy = "0.12.1"
+bevy = { version = "0.12.1", features = ["file_watcher"] }
+random_color = "0.8.0"
 
 [profile.dev.package."*"]
 opt-level = 3
