--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ dynamic-linking = ["bevy/dynamic_linking"]
 
 [dependencies]
 bevy = "0.12.1"
+bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d"] }
 
 [profile.dev.package."*"]
 opt-level = 3
