--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ dynamic-linking = ["bevy/dynamic_linking"]
 
 [dependencies]
 bevy = { version = "0.12.1", features = ["file_watcher"] }
+bevy_egui = "0.24.0"
 bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d"] }
+bevy_replicon = "0.18.0"
 random_color = "0.8.0"
+serde = "1.0.193"
 
 [profile.dev.package."*"]
 opt-level = 3
