--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bevy_egui = "0.24.0"
 bevy_replicon = "0.18.0"
 random_color = "0.8.0"
 serde = "1.0.193"
+enum-iterator = "1.4.1"
 
 [profile.dev.package."*"]
 opt-level = 3
